             on AMD64 and Intel 64 platforms. An improperly validated 64-bit 
             value could be stored in the %RAX register, which could trigger an 
             out-of-bounds system call table access. An untrusted local user 
             could exploit this flaw to run code in the kernel 
             (ie a root privilege escalation). (CVE-2007-4573). 

--------------------------------------------------------------------------------

2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.1
       * Support for kernels:
        2.6.5-7.283 (SLES 9),
        2.6.9-55.EL (RHEL 4),
        2.6.16.46-0.14 (SLES 10),
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.39.cfs8
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * Starting with this release, the ldiskfs backing filesystem required
        by Lustre is now in its own package, lustre-ldiskfs.  This package
        should be installed.  It is versioned separately from Lustre and
        may be released separately in future.

Severity   : minor
Bugzilla   : 13147
Description: block reactivating mgc import until all deactivates complete
Details    : Fix race when failing back MDT/MGS to itself (testing)

Severity   : enhancement
Bugzilla   : 12194
Description: add optional extra BUILD_VERSION info
Details    : add a new environment variable (namely LUSTRE_VERS) which allows
	     to override the lustre version.

Severity   : normal
Frequency  : 2.6.18 servers only
Bugzilla   : 12546
Description: ll_kern_mount() doesn't release the module reference